 * Multiple audio backend support.
   * Xine-based audio backend.
   * "Null" backend for Ex Falso.
 * Tag Editing:
   * Tags From Path: "<~>" will eat a string but not save it.
   * Track Numbers: Allow numbering up to 999.
 * Show image files in Ex Falso.
 * Direct output to console and to a debugging window.
   * Functions are accessible to plugins as print_d, print_e, and print_w.
 * Many bug fixes and performance improvements.
 
1.0 - Yeah they just showed up one day -- staring.
 * Use Mutagen for ASF/WMA and MP4 support.
 * Add IsPlaying and GetPosition to the D-Bus API. (Mickael Royer)
 * Default "No Cover" image. (Jakub Steiner)
 * Add --unfilter to reset browser filters.
 * Sort --enqueued files, and add --unqueue.
 * Basic SPC (SNES ROM audio) support.
 * Paned Browser speed improvements. (Robert Muth)
 * Errors when playing a song are now logged to a special ~errors tag.
   It is visible from the Information screen, and can be reset.
 * APEv2 tags can now override Musepack stream Replay Gain settings.
 * Numerous bug fixes, especially in media device handling.
 * Translation Updates:
   * Hungarian. (SZERVÁC Attila)
   * Finnish. (Jari Rahkonen)
   * Galician and Spanish. (Johám-Luís Miguéns Vila)
   * French. (Guillaume Ayoub)
   * Dutch. (Hans van Dok)
   * Japanese. (Yasushi Iwata)

0.24 - One wonders if our conversation today would be an appropriate epitaph.
 * Media device (iPod and UMS so far) support. (Markus Koller)
 * Delete removes songs from the queue. (sciyoshi)
 * Per-browser window memory.
 * Use Mutagen for WavPack and Musepack support.
 * Keep filenames when given invalid patterns. (Markus Koller)
 * Don't duplicate performers in ~performers. (Martin Bergström)
 * Python 2.5 and GTK+ 2.10 compatibility.
 * Fix Rename Files support on MP4 files.
 * New Romanian translation, by Mugurel Tudor.
 * New Slovak translation, by Lukáš Lalinský.
 * Updated translations:
   * Traditional Chinese, by Hsin-lin Cheng.
   * Japanese, by Yasushi Iwata.